--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,6 @@ language: cpp
 os:
   - osx
 
-compiler:
-  - clang
-#  - gcc
-
 # Only build the master branch, otherwise once the release is added, Github
 # creates a tag which triggers another identical build.
 branches:
@@ -19,12 +15,47 @@ before_install:
   - brew update
 
 install:
-  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+  - if [ ! -f clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz ] ; then
+      curl -L -O http://llvm.org/releases/3.9.0/clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz;
+    fi
+  - tar -xf clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz;
+  - mkdir /usr/local/llvm39;
+  - chmod 744 clang+llvm-3.9.0-x86_64-apple-darwin /usr/local/llvm39;
+  - mv clang+llvm-3.9.0-x86_64-apple-darwin /usr/local/llvm39;
   - brew unlink boost
+  - brew install openssl
 
 script:
-  - brew install --verbose --build-bottle boost --c++11
-  - brew bottle boost
+  - BOOSTVER=1.62.0
+  - PYTHONVER=3.5.2
+  - OSXVER=$(sw_vers -productVersion)
+  # Build python3 with clang3.9
+  - brew unpack --patch --destdir=. python3
+  - pushd python3-$PYTHONVER;
+  - ./configure \
+    --prefix=/usr/local/Cellar/python3/$PYTHONVER \
+    --enable-ipv6 \
+    --datarootdir=/usr/local/Cellar/python3/$PYTHONVER/share \
+    --datadir=/usr/local/Cellar/python3/$PYTHONVER/share \
+    --enable-shared \
+    --with-ensurepip \
+    --without-gcc \
+    CC=/usr/local/llvm39/bin/clang \
+    CXX=/usr/local/llvm39/bin/clang++ \
+    LDFLAGS="$MACOS_SDK -L/usr/local/opt/openssl/lib" \
+    CPPFLAGS="-pipe -w -Os -march=native -isystem/usr/local/include -isystem/usr/include/libxml2 -isystem/System/Library/Frameworks/OpenGL.framework/Versions/Current/Headers -I/usr/local/opt/readline/include -I/usr/local/opt/sqlite/include -I/usr/local/opt/openssl/include $MACOS_SDK" \
+    CFLAGS="-pipe -w -Os -march=native -isystem/usr/local/include -isystem/usr/include/libxml2 -isystem/System/Library/Frameworks/OpenGL.framework/Versions/Current/Headers -I/usr/local/opt/readline/include -I/usr/local/opt/sqlite/include -I/usr/local/opt/openssl/include $MACOS_SDK" \
+    MACOSX_DEPLOYMENT_TARGET=$OSXVER;
+  - CC=/usr/local/llvm39/bin/clang;
+  - CXX=/usr/local/llvm39/bin/clang++;
+  - LDFLAGS="$MACOS_SDK -L/usr/local/opt/openssl/lib";
+  - CPPFLAGS="-pipe -w -Os -march=native -isystem/usr/local/include -isystem/usr/include/libxml2 -isystem/System/Library/Frameworks/OpenGL.framework/Versions/Current/Headers -I/usr/local/opt/readline/include -I/usr/local/opt/sqlite/include -I/usr/local/opt/openssl/include $MACOS_SDK" ;
+  - CFLAGS="-pipe -w -Os -march=native -isystem/usr/local/include -isystem/usr/include/libxml2 -isystem/System/Library/Frameworks/OpenGL.framework/Versions/Current/Headers -I/usr/local/opt/readline/include -I/usr/local/opt/sqlite/include -I/usr/local/opt/openssl/include $MACOS_SDK";
+  - MACOSX_DEPLOYMENT_TARGET=$OSXVER;
+  - make;
+  - make install PYTHONAPPSDIR=/usr/local/Cellar/python3/$PYTHONVER;
+  - brew link --overwrite python3
+  - brew bottle python3
 
 before_deploy:
   - export RELEASE_FILES=$(ls *.bottle.tar.gz)
