Ok, use let's try absolute paths.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,11 @@ before_install:
   - brew update
 
 install:
-  - if [ ! -d downloads ] ; then
-      mkdir downloads
+  - ls
+  - if [ ! -d /Users/travis/downloads ] ; then
+      mkdir /Users/travis/downloads
     fi;
-  - pushd downloads
+  - pushd /Users/travis/downloads
   - if [ ! -f clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz ] ; then
       curl -L -O http://llvm.org/releases/3.9.0/clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz;
     fi
@@ -41,7 +42,7 @@ script:
   - PYTHONVER=3.5.2
   - OSXVER=$(sw_vers -productVersion)
   # Build python3 with clang3.9
-  - pushd downloads
+  - pushd /Users/travis/downloads
   - brew unpack --patch --destdir=. python3
   - pushd python3-$PYTHONVER;
   - if [ ! -d /usr/local/Cellar/python3 ] ; then
