--- a/.travis.yml
+++ b/.travis.yml
@@ -43,14 +43,9 @@ script:
   - OSXVER=$(sw_vers -productVersion)
   # Build python3 with clang3.9
   - pushd downloads
+  - brew install python3
   - brew unpack --patch --destdir=. python3
   - pushd python3-$PYTHONVER;
-  - if [ ! -d /usr/local/Cellar/python3 ] ; then
-      mkdir /usr/local/Cellar/python3 ;
-    fi
-  - if [ ! -d /usr/local/Cellar/python3/$PYTHONVER ] ; then
-      mkdir /usr/local/Cellar/python3/$PYTHONVER ;
-    fi
   - ./configure --prefix=/usr/local/Cellar/python3/$PYTHONVER --enable-ipv6 --datarootdir=/usr/local/Cellar/python3/$PYTHONVER/share --datadir=/usr/local/Cellar/python3/$PYTHONVER/share --enable-shared --with-ensurepip --without-gcc CC=/usr/local/llvm39/bin/clang CXX=/usr/local/llvm39/bin/clang++ LDFLAGS="$MACOS_SDK -L/usr/local/opt/openssl/lib" CPPFLAGS="-pipe -w -Os -march=native -isystem/usr/local/include -isystem/usr/include/libxml2 -isystem/System/Library/Frameworks/OpenGL.framework/Versions/Current/Headers -I/usr/local/opt/readline/include -I/usr/local/opt/sqlite/include -I/usr/local/opt/openssl/include $MACOS_SDK" CFLAGS="-pipe -w -Os -march=native -isystem/usr/local/include -isystem/usr/include/libxml2 -isystem/System/Library/Frameworks/OpenGL.framework/Versions/Current/Headers -I/usr/local/opt/readline/include -I/usr/local/opt/sqlite/include -I/usr/local/opt/openssl/include $MACOS_SDK" MACOSX_DEPLOYMENT_TARGET=$OSXVER;
   - CC=/usr/local/llvm39/bin/clang;
   - CXX=/usr/local/llvm39/bin/clang++;
