Fix release file string
Bottling produces filenames like *.bottle.1.tar.gz instead of *.bottle.tar.gz. Not sure why.

--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ script:
   - brew bottle python3
 
 before_deploy:
-  - export RELEASE_FILES=$(ls *.bottle.tar.gz)
+  - export RELEASE_FILES=$(ls *.bottle.*.tar.gz)
   - "echo 'Deploying files to Github: '$RELEASE_FILES"
 
 deploy:
