--- a/.travis.yml
+++ b/.travis.yml
@@ -73,5 +73,5 @@ deploy:
   file: "${RELEASE_FILES}"
   skip_cleanup: true
   on:
-    repo: uclatommy/travis-homebrew-bottle
+    tag: true
   overwrite: true
