--- a/.travis.yml
+++ b/.travis.yml
@@ -36,19 +36,24 @@ install:
   - brew unlink boost
   - brew install openssl
   - brew install cmake
-  - brew install valgrind
-  - brew install python3
+  - brew install valgrind --build-bottle
+  - brew install python3 --build-bottle
+  - brew tap homebrew/science
+  - brew install hdf5 --build-bottle
 
 script:
   - BOOSTVER=1.62.0
   - PYTHONVER=3.5.2
   - OSXVER=$(sw_vers -productVersion)
+  - VALGRIND=3.12.0
   - pushd downloads
 # Build valgrind
   - brew unlink valgrind
-  - brew unpack --patch --destdir=. --HEAD valgrind
-  - pushd valgrind-HEAD
-  - ./autogen.sh
+  - if [ ! -d valgrind-$VALGRIND ] ; then
+      curl -O -L http://valgrind.org/downloads/valgrind-3.12.0.tar.bz2;
+    fi ;
+  - tar -xf valgrind-3.12.0.tar.bz2
+  - pushd valgrind-$VALGRIND
   - ./autogen.sh
   - ./configure --disable-dependency-tracking --prefix=/usr/local/Cellar/valgrind/HEAD --enable-only64bit --build=amd64-darwin CC=/usr/local/llvm39/bin/clang CXX=/usr/local/llvm39/bin/clang++
   - make && make install
@@ -69,14 +74,16 @@ script:
   - MACOSX_DEPLOYMENT_TARGET=$OSXVER;
   - make;
   - make install PYTHONAPPSDIR=/usr/local/Cellar/python3/$PYTHONVER;
-  - popd; popd;
+  - popd
   - brew link --overwrite python3
+# Build hdf5
+
+  - popd
 # Make bottles
   - mkdir bottles && pushd bottles
   - brew bottle valgrind
   - brew bottle python3
   - popd
-  - cp libpython3.5m.a bottles/libpython3.5m.a
 
 before_deploy:
   - export RELEASE_FILES=$(ls bottles)
