--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ install:
   - brew install valgrind --build-bottle
   - brew install python3 --build-bottle
   - brew tap homebrew/science
-  - travis_wait 60 brew install hdf5 --build-bottle
+  - brew install hdf5
 
 script:
   - BOOSTVER=1.62.0
