--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
   - brew update
 
 install:
-  - ls
+  - xcode-select --install
   - if [ ! -d downloads ] ; then
       mkdir downloads ;
     fi;
@@ -31,8 +31,6 @@ install:
   - mv clang+llvm-3.9.0-x86_64-apple-darwin /usr/local/llvm39;
   - chmod 744 /usr/local/llvm39;
   - popd;
-  - ls /usr/local/llvm39;
-  - ls /usr/local/llvm39/bin;
   - brew unlink boost
   - brew install openssl
   - brew install cmake
@@ -56,7 +54,7 @@ script:
   - pushd valgrind-$VALGRIND
   - ./autogen.sh
   - ./configure --disable-dependency-tracking --prefix=/usr/local/Cellar/valgrind/$VALGRIND --enable-only64bit --build=amd64-darwin CC=/usr/local/llvm39/bin/clang CXX=/usr/local/llvm39/bin/clang++
-  - make
+  - make >/dev/null || make
   - make install
   - brew link --overwrite valgrind
   - popd;
@@ -73,7 +71,7 @@ script:
   - CPPFLAGS="-pipe -w -Os -march=native -isystem/usr/local/include -isystem/usr/include/libxml2 -isystem/System/Library/Frameworks/OpenGL.framework/Versions/Current/Headers -I/usr/local/opt/readline/include -I/usr/local/opt/sqlite/include -I/usr/local/opt/openssl/include $MACOS_SDK" ;
   - CFLAGS="-pipe -w -Os -march=native -isystem/usr/local/include -isystem/usr/include/libxml2 -isystem/System/Library/Frameworks/OpenGL.framework/Versions/Current/Headers -I/usr/local/opt/readline/include -I/usr/local/opt/sqlite/include -I/usr/local/opt/openssl/include $MACOS_SDK";
   - MACOSX_DEPLOYMENT_TARGET=$OSXVER;
-  - make;
+  - make >/dev/null || make;
   - make install PYTHONAPPSDIR=/usr/local/Cellar/python3/$PYTHONVER;
   - popd
   - brew link --overwrite python3
