--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,6 @@ before_install:
   - brew update
 
 install:
-  - xcode-select --install
   - if [ ! -d downloads ] ; then
       mkdir downloads ;
     fi;
@@ -47,10 +46,7 @@ script:
   - pushd downloads
 # Build valgrind
   - brew unlink valgrind
-  - if [ ! -d valgrind-$VALGRIND ] ; then
-      curl -O -L http://valgrind.org/downloads/valgrind-3.12.0.tar.bz2;
-    fi ;
-  - tar -xf valgrind-3.12.0.tar.bz2
+  - brew unpack --patch --destdir=. valgrind
   - pushd valgrind-$VALGRIND
   - ./autogen.sh
   - ./configure --disable-dependency-tracking --prefix=/usr/local/Cellar/valgrind/$VALGRIND --enable-only64bit --build=amd64-darwin CC=/usr/local/llvm39/bin/clang CXX=/usr/local/llvm39/bin/clang++
