--- a/.travis.yml
+++ b/.travis.yml
@@ -95,15 +95,15 @@ script:
   - pushd boost-$BOOSTVER;
   - echo "Bootstrap boost..."
   - ./bootstrap.sh --prefix=/usr/local/Cellar/boost/$BOOSTVER --libdir=/usr/local/Cellar/boost/$BOOSTVER/lib --without-icu --without-libraries=python,mpi > boost_bootstrap.log
-  - ./bootstrap.sh --prefix=/usr/local/Cellar/boost/$BOOSTVER --libdir=/usr/local/Cellar/boost/$BOOSTVER/lib --without-icu --without-libraries=python,mpi;
-  - {
+  - >
+    {
     echo "using darwin : : /usr/local/llvm39/bin/clang++"
     echo "             : <cxxflags>$MACOS_SDK <linkflags>$MACOS_SDK <compileflags>$MACOS_SDK ;"
     echo "using python : 3.5"
     echo "             : /usr/local/bin/python3.5"
     echo "             : /usr/local/Cellar/python3/$PYTHONVER/include/python3.5m ;"
     } > user-config.jam;
-  - echo "boost headers..."
+  - echo 'boost headers...'
   - ./b2 headers
   - echo "Building boost..."
   - ./b2 --prefix=/usr/local/Cellar/boost/$BOOSTVER --libdir=/usr/local/Cellar/boost/$BOOSTVER/lib -d2 -j4 --layout=tagged --user-config=user-config.jam install threading=multi,single link=shared,static > boost.log;
