Build boost using script file instead of travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ script:
   - OSXVER=10.11
   - VALGRIND=3.12.0
   - HDF5=1.8.17
+  - MACOS_SDK="-mmacosx-version-min=$OSXVER";
   - pushd downloads
 # Build valgrind
   - brew unlink valgrind
@@ -88,27 +89,7 @@ script:
   - make install >hdf5.log
   - popd
 # Build Boost
-  - brew unlink boost
-  - if [ ! -d boost-$BOOSTVER ]; then
-      brew unpack --patch --destdir=. boost;
-    fi
-  - pushd boost-$BOOSTVER;
-  - echo "Bootstrap boost..."
-  - ./bootstrap.sh --prefix=/usr/local/Cellar/boost/$BOOSTVER --libdir=/usr/local/Cellar/boost/$BOOSTVER/lib --without-icu --without-libraries=python,mpi > boost_bootstrap.log
-  - >
-    {
-    echo "using darwin : : /usr/local/llvm39/bin/clang++"
-    echo "             : <cxxflags>$MACOS_SDK <linkflags>$MACOS_SDK <compileflags>$MACOS_SDK ;"
-    echo "using python : 3.5"
-    echo "             : /usr/local/bin/python3.5"
-    echo "             : /usr/local/Cellar/python3/$PYTHONVER/include/python3.5m ;"
-    } > user-config.jam;
-  - echo 'boost headers...'
-  - ./b2 headers
-  - echo "Building boost..."
-  - travis_wait 40 ./b2 --prefix=/usr/local/Cellar/boost/$BOOSTVER --libdir=/usr/local/Cellar/boost/$BOOSTVER/lib -d2 -j4 --layout=tagged --user-config=user-config.jam install threading=multi,single link=shared,static > boost.log;
-  - popd
-  - brew link --overwrite boost
+  - travis_wait 40 ./build-boost.sh $OSXVER $PYTHONVER $BOOSTVER
 # Build Boost-Python
   - popd
 # Make bottles
@@ -116,6 +97,7 @@ script:
   - brew bottle valgrind
   - brew bottle python3
   - brew bottle hdf5
+  - brew bottle boost
   - popd
 
 before_deploy:
