--- a/.travis.yml
+++ b/.travis.yml
@@ -39,10 +39,10 @@ install:
     fi
   - export CC=/usr/local/llvm39/bin/clang
   - export CXX=/usr/local/llvm39/bin/clang++
-  - brew install openssl
-  - brew install cmake
-  - brew install sqlite
-  - brew install xz
+  - brew install openssl || brew upgrade openssl
+  - brew install cmake || brew upgrade cmake
+  - brew install sqlite || brew upgrade sqlite
+  - brew install xz || brew upgrade xz
   - brew install --build-bottle valgrind
   - brew install --build-bottle python3
   - brew unlink boost
