--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ install:
     fi;
   - if [ ! -d clang+llvm-3.9.0-x86_64-apple-darwin ] ; then
       tar -xf clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz;
-      cp clang+llvm-3.9.0-x86_64-apple-darwin /usr/local/llvm39;
+      cp clang+llvm-3.9.0-x86_64-apple-darwin/* /usr/local/llvm39;
       chmod 744 /usr/local/llvm39;
     fi
   - export CC=/usr/local/llvm39/bin/clang
