--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,6 @@ matrix:
 cache:
   directories:
   - downloads
-  - /usr/local/llvm39
 
 # Only build the master branch, otherwise once the release is added, Github
 # creates a tag which triggers another identical build.
@@ -35,7 +34,7 @@ install:
     fi;
   - if [ ! -d clang+llvm-3.9.0-x86_64-apple-darwin ] ; then
       tar -xf clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz;
-      cp clang+llvm-3.9.0-x86_64-apple-darwin/* /usr/local/llvm39;
+      mv clang+llvm-3.9.0-x86_64-apple-darwin /usr/local/llvm39;
       chmod 744 /usr/local/llvm39;
     fi
   - export CC=/usr/local/llvm39/bin/clang
