Remove any existing llvm39 directory.

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,9 @@ install:
   - if [ ! -f clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz ] ; then
       curl -L -O http://llvm.org/releases/3.9.0/clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz;
     fi;
+  - if [ -d /usr/local/llvm39 ] ; then
+      rm -r /usr/local/llvm39;
+    fi
   - if [ ! -d clang+llvm-3.9.0-x86_64-apple-darwin ] ; then
       tar -xf clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz;
       mv clang+llvm-3.9.0-x86_64-apple-darwin /usr/local/llvm39;
