--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,8 @@ install:
   - if [ -d /usr/local/llvm39 ] ; then
       rm -r /usr/local/llvm39;
     fi
-  - if [ ! -d clang+llvm-3.9.0-x86_64-apple-darwin ] ; then
+  - if [ -d clang+llvm-3.9.0-x86_64-apple-darwin ] ; then
+      rm -r clang+llvm-3.9.0-x86_64-apple-darwin
       tar -xf clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz;
       mv clang+llvm-3.9.0-x86_64-apple-darwin /usr/local/llvm39;
       chmod 744 /usr/local/llvm39;
