--- a/.travis.yml
+++ b/.travis.yml
@@ -36,11 +36,11 @@ install:
       rm -r /usr/local/llvm39;
     fi
   - if [ -d clang+llvm-3.9.0-x86_64-apple-darwin ] ; then
-      rm -r clang+llvm-3.9.0-x86_64-apple-darwin
-      tar -xf clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz;
-      mv clang+llvm-3.9.0-x86_64-apple-darwin /usr/local/llvm39;
-      chmod 744 /usr/local/llvm39;
+      rm -r clang+llvm-3.9.0-x86_64-apple-darwin;
     fi
+  - tar -xf clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz;
+  - mv clang+llvm-3.9.0-x86_64-apple-darwin /usr/local/llvm39;
+  - chmod 744 /usr/local/llvm39;
   - export CC=/usr/local/llvm39/bin/clang
   - export CXX=/usr/local/llvm39/bin/clang++
   - brew install openssl || brew upgrade openssl
