--- a/.travis.yml
+++ b/.travis.yml
@@ -24,36 +24,30 @@ before_install:
   - brew update
 
 install:
+  - LLVMVER = 3.9.0
   - if [ ! -d downloads ] ; then
       mkdir downloads ;
     fi;
   - pushd downloads
   - ls -l
-  - if [ ! -f clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz ] ; then
-      curl -L -O http://llvm.org/releases/3.9.0/clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz;
+  - if [ ! -f clang+llvm-$LLVMVER-x86_64-apple-darwin.tar.xz ] ; then
+      curl -L -O http://llvm.org/releases/$LLVMVER/clang+llvm-$LLVMVER-x86_64-apple-darwin.tar.xz;
     fi;
-  - if [ -d /usr/local/llvm39 ] ; then
-      rm -r /usr/local/llvm39;
+  - if [ -d /usr/local/llvm ] ; then
+      rm -r /usr/local/llvm;
     fi
-  - if [ -d clang+llvm-3.9.0-x86_64-apple-darwin ] ; then
-      rm -r clang+llvm-3.9.0-x86_64-apple-darwin;
+  - if [ -d clang+llvm-$LLVMVER-x86_64-apple-darwin ] ; then
+      rm -r clang+llvm-$LLVMVER-x86_64-apple-darwin;
     fi
-  - tar -xf clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz;
-  - mv clang+llvm-3.9.0-x86_64-apple-darwin /usr/local/llvm39;
-  - chmod 744 /usr/local/llvm39;
-  - export CC=/usr/local/llvm39/bin/clang
-  - export CXX=/usr/local/llvm39/bin/clang++
+  - tar -xf clang+llvm-$LLVMVER-x86_64-apple-darwin.tar.xz;
+  - mv clang+llvm-$LLVMVER-x86_64-apple-darwin /usr/local/llvm;
+  - chmod 744 /usr/local/llvm;
+  - export CC=/usr/local/llvm/bin/clang
+  - export CXX=/usr/local/llvm/bin/clang++
   - brew install openssl || brew upgrade openssl
   - brew install cmake || brew upgrade cmake
   - brew install sqlite || brew upgrade sqlite
   - brew install xz || brew upgrade xz
-  - brew install --build-bottle valgrind
-  - brew install --build-bottle python3
-  - brew unlink boost
-#  - travis_wait 40 brew install --build-bottle boost
-#  - brew install --with-python3 --build-bottle boost-python
-  - brew tap homebrew/science
-  - brew install hdf5
   - popd;
 
 script:
@@ -63,57 +57,43 @@ script:
   - VALGRIND=3.12.0
   - HDF5=1.8.17
   - MACOS_SDK="-mmacosx-version-min=$OSXVER";
-  - pushd downloads
-# Build valgrind
-  - brew unlink valgrind
-  - if [ ! -d valgrind-$VALGRIND ] ; then
-      brew unpack --patch --destdir=. valgrind ;
-    fi;
-  - pushd valgrind-$VALGRIND
-  - ./autogen.sh
-  - ./configure --disable-dependency-tracking --prefix=/usr/local/Cellar/valgrind/$VALGRIND --enable-only64bit --build=amd64-darwin CC=/usr/local/llvm39/bin/clang CXX=/usr/local/llvm39/bin/clang++
-  - make >/dev/null || make
-  - make install > valgrind.log
-  - brew link --overwrite valgrind
-  - popd;
-# Build python3
-  - brew unlink python3
-  - if [ ! -d python3-$PYTHONVER ] ; then
-      brew unpack --patch --destdir=. python3;
-    fi;
-  - pushd python3-$PYTHONVER;
-  - ./configure --prefix=/usr/local/Cellar/python3/$PYTHONVER --enable-ipv6 --datarootdir=/usr/local/Cellar/python3/$PYTHONVER/share --datadir=/usr/local/Cellar/python3/$PYTHONVER/share --enable-shared --with-ensurepip --without-gcc --with-valgrind CC=/usr/local/llvm39/bin/clang CXX=/usr/local/llvm39/bin/clang++ LDFLAGS="$MACOS_SDK -L/usr/local/opt/openssl/lib" CPPFLAGS="-pipe -w -Os -march=native -isystem/usr/local/include -isystem/usr/include/libxml2 -isystem/System/Library/Frameworks/OpenGL.framework/Versions/Current/Headers -I/usr/local/opt/readline/include -I/usr/local/opt/sqlite/include -I/usr/local/opt/openssl/include $MACOS_SDK" CFLAGS="-pipe -w -Os -march=native -isystem/usr/local/include -isystem/usr/include/libxml2 -isystem/System/Library/Frameworks/OpenGL.framework/Versions/Current/Headers -I/usr/local/opt/readline/include -I/usr/local/opt/sqlite/include -I/usr/local/opt/openssl/include $MACOS_SDK";
-  - CC=/usr/local/llvm39/bin/clang;
-  - CXX=/usr/local/llvm39/bin/clang++;
-  - LDFLAGS="$MACOS_SDK -L/usr/local/opt/openssl/lib";
-  - CPPFLAGS="-pipe -w -Os -march=native -isystem/usr/local/include -isystem/usr/include/libxml2 -isystem/System/Library/Frameworks/OpenGL.framework/Versions/Current/Headers -I/usr/local/opt/readline/include -I/usr/local/opt/sqlite/include -I/usr/local/opt/openssl/include $MACOS_SDK" ;
-  - CFLAGS="-pipe -w -Os -march=native -isystem/usr/local/include -isystem/usr/include/libxml2 -isystem/System/Library/Frameworks/OpenGL.framework/Versions/Current/Headers -I/usr/local/opt/readline/include -I/usr/local/opt/sqlite/include -I/usr/local/opt/openssl/include $MACOS_SDK";
-  - MACOSX_DEPLOYMENT_TARGET=$OSXVER;
-  - make >/dev/null || make;
-  - make install PYTHONAPPSDIR=/usr/local/Cellar/python3/$PYTHONVER > python3.log;
-  - popd
-  - brew link --overwrite python3
-# Build hdf5
-  - brew unlink hdf5
-  - if [ ! -d hdf5-$HDF5 ] ; then
-      brew unpack --patch --destdir=. hdf5;
+  - BUILD_VALGRIND = true
+  - BUILD_PYTHON = true
+  - BUILD_HDF5 = true
+  - BUILD_BOOST = true
+  - BUILD_BOOST_PYTHON = true
+  - if [ $OSXVER = 10.10 ] ; then
+      OSX_NAME = yosemite ;
+    elif [ $OSXVER = 10.11 ]
+      OSX_NAME = el_capitan ;
     fi
-  - pushd hdf5-$HDF5
-  - ./configure --prefix=/usr/local/Cellar/hdf5/$HDF5 --enable-production --enable-debug=no --disable-dependency-tracking --with-zlib=/usr --with-szlib=/usr/local/opt/szip --enable-static=yes --enable-shared=yes --enable-cxx --disable-fortran CC=/usr/local/llvm39/bin/clang CXX=/usr/local/llvm39/bin/clang++ CFLAGS="$MACOS_SDK" CPPFLAGS="$MACOS_SDK" LDFLAGS="$MACOS_SDK";
-  - make >/dev/null || make
-  - make install >hdf5.log
-  - popd
-# Build Boost
-#  - travis_wait 40 ./../build-boost.sh $OSXVER $PYTHONVER $BOOSTVER
-# Build Boost-Python
-#  - ./../build-boost-python.sh $OSXVER $PYTHONVER $BOOSTVER
+  - pushd downloads
+  
+# Build/Install hdf5
+  - if [ wget 'https://github.com/uclatommy/travis-homebrew-bottle/releases/download/quantum-dev/hdf5-$HDF5.$OSX_NAME.bottle*tar.gz'] ; then
+      brew install hdf5-$HDF5.$OSX_NAME.bottle.tar.gz;
+    else
+      BUILD_HDF5 = true
+    fi
+  - if [ "$BUILD_HDF5" = true ] ; then
+      brew install hdf5;
+      brew unlink hdf5;
+      if [ ! -d hdf5-$HDF5 ] ; then
+        brew unpack --patch --destdir=. hdf5;
+      fi;
+      pushd hdf5-$HDF5;
+      ./configure --prefix=/usr/local/Cellar/hdf5/$HDF5 --enable-production --enable-debug=no --disable-dependency-tracking --with-zlib=/usr --with-szlib=/usr/local/opt/szip --enable-static=yes --enable-shared=yes --enable-cxx --disable-fortran CC=/usr/local/llvm/bin/clang CXX=/usr/local/llvm/bin/clang++ CFLAGS="$MACOS_SDK" CPPFLAGS="$MACOS_SDK" LDFLAGS="$MACOS_SDK";
+      make >/dev/null || make;
+      make install >hdf5.log;
+      brew bottle hdf5;
+      popd;
+    fi
 # Make bottles
   - popd
   - mkdir bottles-osx$OSXVER && pushd bottles-osx$OSXVER
-  - brew bottle valgrind
-  - brew bottle python3
-  - brew bottle hdf5
-#  - brew bottle boost
+  - if [ "$BUILD_HDF5" = true ]; then
+      cp ../downloads/*.$OSX_NAME.bottle*tar.gz .
+    fi
   - popd
 
 before_deploy:
