You must use exact file name to check existence. No wildcards.

--- a/.travis.yml
+++ b/.travis.yml
@@ -69,7 +69,7 @@ script:
     fi
   - pushd downloads && ls
 # Build/Install hdf5
-  - if [ -f hdf5-$HDF5.$OSX_NAME.bottle*tar.gz ] ; then
+  - if [ -f hdf5-$HDF5.$OSX_NAME.bottle.tar.gz ] ; then
       BUILD_HDF5=false;
       brew install hdf5-$HDF5.$OSX_NAME.bottle.tar.gz;
     else
